--- a/app.json
+++ b/app.json
@@ -26,7 +26,8 @@
           }
         ],
         "ITSAppUsesNonExemptEncryption": false
-      }
+      },
+      "usesAppleSignIn": true
     },
     "android": {
       "adaptiveIcon": {
